reduce space between each entry and subtitle to avoid awkward spacing between pages

--- a/static/cv/css/styles.css
+++ b/static/cv/css/styles.css
@@ -43,7 +43,7 @@ sup {
 }
 
 .details .place {
-  margin-top: 0.25rem;
+  margin-top: 0.15rem;
 }
 
 .main-block:not(.concise) .details div {
